--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>My awesome web page</title>
     </head>
-    <img><img src="https://avatars3.githubusercontent.com/u/71351485?v=4"></img>
+    <img src="https://avatars3.githubusercontent.com/u/71351485?v=4">
   <body>
     Hello there, awesome person! 
   </body>
