--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     </head>
     <img src="https://avatars3.githubusercontent.com/u/71351485?v=4">
   <body>
+      <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
+
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>
     Hello there, awesome person! 
      
   </body>
