--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     </head>
    
   <body>
-       <img src="https://avatars3.githubusercontent.com/u/71351485?v=4">
+       <img><src="https://avatars3.githubusercontent.com/u/71351485?v=4">
+      
       <ol>
     <li>This</li>
     <li>Is an</li>
@@ -20,7 +21,7 @@
     <li>This</li>
     <li>Is an</li>
     <li>Unordered list</li>
-     <li><a href="https://github.com">This is a link to GitHub!</a></li>
+     
 </ul>
     Hello there, awesome person! 
 
