--- a/index.html
+++ b/index.html
@@ -4,7 +4,19 @@
     </head>
     <img src="https://avatars3.githubusercontent.com/u/71351485?v=4">
   <body>
-          
+ <ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+          <li><a href="https://github.com">This is a link to GitHub!</a></li>
+
+</ol>
+
+<ul>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Unordered list</li>
+</ul>    
     <li>This</li>
     <li>Is an</li>
     <li>Ordered list</li>
